--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  dots_indicator: ^3.0.0
+  get: ^4.6.5
 
 
   # The following adds the Cupertino Icons font to your application.
